--- a/about.html
+++ b/about.html
@@ -4,3 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À propos de Quayno</title>
+        <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <h1>Quayno</h1>
+        </div>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="community.html">Communauté</a>
+            <a href="trends.html">Tendances</a>
+            <a href="groups.html">Groupes</a>
+            <a href="help.html">Aide</a>
+            <a href="profile.html">Mon Profil</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="about-section">
+            <h2>À propos de Quayno</h2>
+            <p>Quayno est une plateforme sociale révolutionnaire qui permet à chacun de s'exprimer, de partager des idées et de se connecter avec des gens du monde entier. Notre mission est de créer un environnement où chacun peut se sentir écouté et apprécié.</p>
+        </section>
+
+        <section class="team-section">
+            <h3>Notre équipe</h3>
+            <p>Nous sommes une équipe passionnée par la technologie et la création de communautés en ligne. Quayno a été fondé pour encourager l'expression libre et favoriser les interactions positives.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 Quayno - Tous droits réservés. | <a href="help.html">Aide</a></p>
+    </footer>
+</body>
+</html>
