--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Inscrivez-vous à Quayno et commencez à partager vos idées.">
     <title>S'inscrire - Quayno</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -14,7 +13,7 @@
         </div>
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="about.html">À propos</a>
+            <a href="community.html">Communauté</a>
             <a href="help.html">Aide</a>
         </nav>
     </header>
@@ -22,19 +21,16 @@
     <main>
         <section class="signup-section">
             <h2>Créez votre compte</h2>
-            <form action="/submit-signup" method="POST">
-                <div class="form-group">
-                    <label for="username">Nom d'utilisateur</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Adresse e-mail</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
+            <form id="signup-form">
+                <label for="username">Nom d'utilisateur</label>
+                <input type="text" id="username" name="username" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="password">Mot de passe</label>
+                <input type="password" id="password" name="password" required>
+
                 <button type="submit" class="cta-button">S'inscrire</button>
             </form>
         </section>
@@ -43,5 +39,7 @@
     <footer>
         <p>© 2024 Quayno - Tous droits réservés.</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
