--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,11 @@
             <div id="post-container">
                 <!-- Les posts de l'utilisateur seront chargés ici -->
             </div>
+            <form id="post-form">
+                <label for="post-content">Nouveau post:</label>
+                <textarea id="post-content" name="content" required></textarea>
+                <button type="submit" class="cta-button">Publier</button>
+            </form>
         </section>
     </main>
 
@@ -31,6 +36,6 @@
         <p>© 2024 Quayno - Tous droits réservés.</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/profile.js"></script>
 </body>
 </html>
